samples/_failures_safe/1761411300_d47de2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b14117.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_43b14117.c:176:9: error: expected declaration or statement at end of input
  176 |         Token* token = &lexer->tokens[i];
      |         ^~~~~
./samples/SAFE/__tmp_43b14117.c:176:9: error: expected declaration or statement at end of input
